# opengl-experiments

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  README.md
assets/shaders/: particle-fragment.glsl  particle-vertex.glsl  sprite-fragment.glsl  sprite-vertex.glsl
assets/shaders/bkup/: particle-fragment.glsl  particle-vertex.glsl  sprite-fragment.glsl  sprite-vertex.glsl
src/common/: CMakeLists.txt  colormap.cpp  colormap.h  lerp.h
src/engine/: CMakeLists.txt  assets.cpp  assets.h  engine.cpp  engine.h
src/engine/components/: position.h
src/engine/renderers/: particlerenderer.cpp  particlerenderer.h  spriterenderer.cpp  spriterenderer.h
src/engine/shader/: glerror.cpp  glerror.h  program.cpp  program.h  texture.cpp  texture.h
src/engine/systems/: particlesystem.cpp  particlesystem.h  system.cpp  system.h
src/simulations/boids/: CMakeLists.txt  main.cpp
src/simulations/boids/systems/: backgroundrenderer.cpp  backgroundrenderer.h  boidrenderer.cpp  boidrenderer.h
src/version/: version.cpp.in  version.h
